Bugs fixed, repetitive actions introduced into functions, ViewBinding added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,8 @@
         android:fontFamily="@font/montserrat"
         android:scaleType="centerCrop"
         android:text="Take WIN"
+        android:visibility="invisible"
+        android:enabled="false"
         android:textColor="@color/black"
         android:textSize="8dp"
         app:layout_constraintBottom_toTopOf="@+id/balance"
@@ -78,6 +80,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect1"
         android:hint="x1.2"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
@@ -94,7 +97,7 @@
         android:layout_height="wrap_content"
 
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@+id/btn12"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +110,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect1"
         android:hint="x1.2"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@id/btn13"
@@ -120,7 +124,7 @@
         android:layout_height="wrap_content"
 
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@id/btn13"
         app:layout_constraintStart_toEndOf="@+id/btn11"
@@ -133,6 +137,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect1"
         android:hint="x1.2"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@+id/btn14"
@@ -150,7 +155,7 @@
 
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@+id/btn14"
-        android:alpha="0"
+        android:visibility="invisible"
 
         app:layout_constraintStart_toEndOf="@+id/btn12"
         app:layout_constraintTop_toBottomOf="@id/btn23" />
@@ -161,6 +166,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect1"
         android:hint="x1.2"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toStartOf="@id/btn15"
@@ -173,7 +179,7 @@
         android:id="@+id/img14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0"
+        android:visibility="invisible"
         android:src="@drawable/btom"
 
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
@@ -187,6 +193,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect1"
         android:hint="x1.2"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toEndOf="parent"
@@ -200,7 +207,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/withdraw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn14"
@@ -212,6 +219,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect2"
         android:hint="x1.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn11"
         app:layout_constraintEnd_toStartOf="@id/btn22"
@@ -224,7 +232,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn11"
         app:layout_constraintEnd_toStartOf="@id/btn22"
         app:layout_constraintStart_toStartOf="parent"
@@ -236,6 +244,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect2"
         android:hint="x1.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn12"
         app:layout_constraintEnd_toStartOf="@id/btn23"
@@ -248,7 +257,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn12"
         app:layout_constraintEnd_toStartOf="@id/btn23"
         app:layout_constraintStart_toEndOf="@+id/btn21"
@@ -260,6 +269,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect2"
         android:hint="x1.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn13"
         app:layout_constraintEnd_toStartOf="@+id/btn24"
@@ -272,7 +282,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn13"
         app:layout_constraintEnd_toStartOf="@+id/btn24"
         app:layout_constraintStart_toEndOf="@+id/btn22"
@@ -284,6 +294,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect2"
         android:hint="x1.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn14"
         app:layout_constraintEnd_toStartOf="@id/btn25"
@@ -296,7 +307,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn14"
         app:layout_constraintEnd_toStartOf="@id/btn25"
         app:layout_constraintStart_toEndOf="@+id/btn23"
@@ -308,6 +319,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect2"
         android:hint="x1.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn15"
         app:layout_constraintEnd_toEndOf="parent"
@@ -320,7 +332,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn24"
@@ -332,6 +344,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect3"
         android:hint="x2.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn21"
         app:layout_constraintEnd_toStartOf="@id/btn32"
@@ -344,7 +357,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn21"
         app:layout_constraintEnd_toStartOf="@id/btn32"
         app:layout_constraintStart_toStartOf="parent"
@@ -356,6 +369,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect3"
         android:hint="x2.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn22"
         app:layout_constraintEnd_toStartOf="@id/btn33"
@@ -368,7 +382,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn22"
         app:layout_constraintEnd_toStartOf="@id/btn33"
         app:layout_constraintStart_toEndOf="@+id/btn31"
@@ -380,6 +394,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect3"
         android:hint="x2.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn23"
         app:layout_constraintEnd_toStartOf="@+id/btn34"
@@ -392,7 +407,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn23"
         app:layout_constraintEnd_toStartOf="@+id/btn34"
         app:layout_constraintStart_toEndOf="@+id/btn32"
@@ -404,6 +419,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect3"
         android:hint="x2.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn24"
         app:layout_constraintEnd_toStartOf="@id/btn35"
@@ -416,7 +432,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn24"
         app:layout_constraintEnd_toStartOf="@id/btn35"
         app:layout_constraintStart_toEndOf="@+id/btn33"
@@ -428,6 +444,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect3"
         android:hint="x2.5"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn25"
         app:layout_constraintEnd_toEndOf="parent"
@@ -440,7 +457,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn25"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn34"
@@ -452,6 +469,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect4"
         android:hint="x4.0"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn31"
         app:layout_constraintEnd_toStartOf="@id/btn42"
@@ -464,7 +482,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn31"
         app:layout_constraintEnd_toStartOf="@id/btn42"
         app:layout_constraintStart_toStartOf="parent"
@@ -476,6 +494,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect4"
         android:hint="x4.0"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn32"
         app:layout_constraintEnd_toStartOf="@id/btn43"
@@ -488,7 +507,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn32"
         app:layout_constraintEnd_toStartOf="@id/btn43"
         app:layout_constraintStart_toEndOf="@+id/btn41"
@@ -500,6 +519,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect4"
         android:hint="x4.0"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn33"
         app:layout_constraintEnd_toStartOf="@+id/btn44"
@@ -512,7 +532,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn33"
         app:layout_constraintEnd_toStartOf="@+id/btn44"
         app:layout_constraintStart_toEndOf="@+id/btn42"
@@ -524,6 +544,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect4"
         android:hint="x4.0"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn34"
         app:layout_constraintEnd_toStartOf="@id/btn45"
@@ -536,7 +557,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn34"
         app:layout_constraintEnd_toStartOf="@id/btn45"
         app:layout_constraintStart_toEndOf="@+id/btn43"
@@ -548,6 +569,7 @@
         android:layout_height="0dp"
         android:background="@drawable/rect4"
         android:hint="x4.0"
+        android:enabled="false"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/btn35"
         app:layout_constraintEnd_toEndOf="parent"
@@ -560,7 +582,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/btom"
-        android:alpha="0"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/btn35"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn44"
